syntax = "proto2";
package protobuf;
option java_multiple_files = true;
option java_package = "ba.unsa.etf.pnwt.proto";

message LoggingRequest{
  required string service_name = 1;
  optional string user_uuid = 2;
  required string controller_name = 3;
  optional string action_url = 4;
  optional string action_type = 5;
  optional string action_response = 6;
  optional string timestamp = 7;
}

message LoggingResponse {
  required string response_message = 1;
}

service LoggingService {
  rpc logRequest(LoggingRequest) returns (LoggingResponse) {};
}